--- a/src/assets/scss/md/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/md/_sidebar-and-main-panel.scss
@@ -323,7 +323,7 @@
     }
 
     > .footer{
-        border-top: 1px solid #e7e7e7;
+        // border-top: 1px solid #e7e7e7;
     }
 
     > .navbar{
